--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "jquery": "^3.2.1",
     "mysql": "^2.13.0",
     "path": "^0.12.7",
